--- a/index.html
+++ b/index.html
@@ -91,6 +91,14 @@
                         <img src="./images/Group 23.svg" alt="">
                         <span id="current-life">5</span>
                     </button>
+
+
+                    <!-- WPM -->
+                    <button class="btn px-4 rounded-full bg-[#360490] items-center justify-center mx-52 text-white">
+                        wps:
+                        <span id="current-wps">0</span>
+                    </button>
+
                     <!-- display score -->
                     <button class="btn px-4 rounded-full bg-[#360490] items-center justify-center mx-52 text-white">
                         Score
@@ -98,28 +106,31 @@
                         <span id="current-score">0</span>
                     </button>
 
-                    <!-- WPM -->
-                    <button class="btn px-4 rounded-full bg-[#360490] items-center justify-center mx-52 text-white">
-                        wps: 
-                        <span id="current-wps">0</span>
-                    </button>
+
+
 
                 </div>
             </div>
         </section>
 
         <!-- playground end -->
-        <section class="score flex justify-center items-center min-h-screen hidden">
+        <section id="game-over" class="score flex justify-center items-center min-h-screen hidden">
             <div class="text-center space-y-6 bg-[#FFFFFF33] p-4 rounded-lg">
+                <h4 class="text-5xl text-white">Game over !!</h4>
                 <h1 class="text-8xl text-white">
                     <span class="font-extrabold">Score: </span>
-                    <span>14</span>
+                    <span id="scoreBoard">0</span>
                 </h1>
-                <button class="btn my-4">Play again</button>
+                <button onclick="playAgain()" class="btn my-4">Play again</button>
                 <p class="text-white">Practice makes you pro</p>
             </div>
         </section>
     </main>
+
+
+    <section>
+
+    </section>
 
 
     <!-- node js -->
