--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
                     <!-- WPM -->
                     <button class="btn px-4 rounded-full bg-[#360490] items-center justify-center mx-52 text-white">
                         wps:
-                        <span id="current-wps">0</span>
+                        <span id="wps-display">0</span>
                     </button>
 
                     <!-- display score -->
